version-23.1/reference/rpk/rpk-cloud/rpk-cloud-byoc.mdx
---
title: rpk cloud byoc
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk cloud byoc| Redpanda Docs" />
  <meta name="description" content="rpk cloud byoc" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-cloud/rpk-cloud-byoc/" />
</head>

Manage a Redpanda cloud BYOC agent.

For BYOC, Redpanda installs an agent service in your owned cluster. The agent
then proceeds to provision further infrastructure and eventually, a full
Redpanda cluster.

The BYOC command runs Terraform to create and start the agent. You first need
a redpanda-id (or cluster ID); this is used to get the details of how your
agent should be provisioned. You can create a BYOC cluster in our cloud UI
and then come back to this command to complete the process.

## Usage

```bash
rpk cloud byoc [command] [flags]
```

## Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--client-id |string |The client ID of the organization in Redpanda
Cloud.

|--client-secret |string |The client secret of the organization in
Redpanda Cloud.

|-h, --help |- |Help for byoc.

|-v, --verbose |- |Enable verbose logging (default: false).
|===

-->
